# copilot-money-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  go.mod
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cmd/copilot/: main.go
demo/: basic.tape
docs/: commands.md  validation-plan.md
graphql/: AddTransactionToRecurring.graphql  Budgets.graphql  Categories.graphql  CreateCategory.graphql  CreateRecurring.graphql  CreateTag.graphql  DeleteTag.graphql  EditRecurring.graphql  InvestmentSettings.graphql  MonthlySpend.graphql  Networth.graphql  NetworthLiveBalance.graphql  NetworthSettings.graphql  Spends.graphql  Subscription.graphql  UpcomingRecurrings.graphql  User.graphql  WaitlistCheck.graphql
internal/cli/: root.go  root_test.go
schema/: README.md  schema.graphql
scripts/: generate-demos.sh  release.sh  setup-dev.sh  update-coverage.sh
src/: cli.rs  client.rs  config.rs  lib.rs  main.rs  ops.rs  schema_gen.rs  types.rs
src/cli/: auth.rs  budgets.rs  categories.rs  mod.rs  recurrings.rs  render.rs  tags.rs
tests/: cli.rs  cli_snapshots.rs  client_http.rs  config.rs
tests/snapshots/: cli_snapshots__auth_status_json_snapshot.snap  cli_snapshots__auth_status_table_snapshot.snap  cli_snapshots__budgets_month_json_snapshot.snap  cli_snapshots__budgets_month_table_snapshot.snap  cli_snapshots__categories_create_table_snapshot.snap  (+30 more)
tools/: capture_graphql_ops.py  get_token.py
(+14 files in other folders)
