[package]
name = "copilot-money-api"
version = "0.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/JaviSoto/copilot-money-api"
publish = false

[[bin]]
name = "copilot"
path = "src/main.rs"

[[bin]]
name = "schema-gen"
path = "src/bin/schema_gen.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.48", features = ["derive"] }
graphql-parser = "0.4.1"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
tabled = "0.20.0"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.23.0"
